--- a/BigBasketRecommendationUsingApriori.ipynb
+++ b/BigBasketRecommendationUsingApriori.ipynb
@@ -36,6 +36,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Installing Apriori Package\n",
         "!pip install apyori"
       ],
       "metadata": {
@@ -77,6 +78,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Importing python packages\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n"
@@ -84,7 +86,7 @@
       "metadata": {
         "id": "-dhRJ7PnKUQo"
       },
-      "execution_count": 14,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -99,6 +101,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Importing Big Basket Dataset.\n",
+        "#Allocating dataset values into array. \n",
         "dataset = pd.read_csv('BigBasketShoppingData.csv', header =None)\n",
         "transactions = []\n",
         "for i in range (0, 7219):\n",
@@ -113,6 +117,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Displaying Dataset\n",
         "print(dataset)"
       ],
       "metadata": {
@@ -181,6 +186,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Importing Apriori Algorithm and Associating the most relevant data using apriori algorithm.\n",
         "from apyori import apriori\n",
         "basket_intelligence = apriori(transactions = transactions, min_support = 0.003, min_confidence = 0.2, min_lift = 3, min_length = 2, max_length = 2)"
       ],
@@ -280,6 +286,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Displaying Associated data \n",
         "def inspect(results):\n",
         "    product1         = [tuple(result[2][0][0])[0] for result in results]\n",
         "    product2         = [tuple(result[2][0][1])[0] for result in results]\n",
@@ -534,6 +541,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Displaying Associated data in order \n",
         "DataFrame_intelligence.nlargest(n = 10, columns = 'Lift')"
       ],
       "metadata": {
@@ -542,16 +550,16 @@
           "height": 363
         },
         "id": "ce18y1buaLvm",
-        "outputId": "0b60446f-9802-4c88-cea3-c013c554120a"
+        "outputId": "2c3e69ec-23a1-4367-f7e1-030001350986"
       },
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-2af52961-1aa5-4958-8f2c-b3e6a92f7990\">\n",
+              "  <div id=\"df-b62928ea-168c-42da-b855-93e77cdf0469\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -662,7 +670,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2af52961-1aa5-4958-8f2c-b3e6a92f7990')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b62928ea-168c-42da-b855-93e77cdf0469')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -713,12 +721,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2af52961-1aa5-4958-8f2c-b3e6a92f7990 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b62928ea-168c-42da-b855-93e77cdf0469 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2af52961-1aa5-4958-8f2c-b3e6a92f7990');\n",
+              "          const element = document.querySelector('#df-b62928ea-168c-42da-b855-93e77cdf0469');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -754,7 +762,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 33
         }
       ]
     }
