--- a/BigBasketRecommendationUsingApriori.ipynb
+++ b/BigBasketRecommendationUsingApriori.ipynb
@@ -30,7 +30,7 @@
         "id": "Z-jZGC0q0aiY"
       },
       "source": [
-        "# Apriori"
+        "# Bigbasket Product Recommendation Project"
       ]
     },
     {
@@ -122,7 +122,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "dEXio2hnRTSE",
         "outputId": "26afe603-4051-467c-c892-6f52a2f2bb83"
@@ -158,7 +159,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "wag6Xvh8Sown",
         "outputId": "8038fb36-0963-43c0-a636-348ae2933186"
@@ -222,7 +224,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "9waaERRaVGWA",
         "outputId": "52b7dc5c-fe60-47ec-ff98-750fdf15c545"
@@ -258,7 +261,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "5X-Xr6-tXPE0",
         "outputId": "b3cdb982-849e-4f63-9532-806dbcdfcc70"
@@ -310,7 +314,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 394
+          "height": 382
         },
         "id": "5NeFarDnZ-FB",
         "outputId": "a120707f-8905-44e0-dd66-1780e71db0f9"
@@ -547,7 +551,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
+          "height": 352
         },
         "id": "ce18y1buaLvm",
         "outputId": "2c3e69ec-23a1-4367-f7e1-030001350986"
